# zcube-project

./: .gitignore
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: esp32s3_devkitc_procpu.overlay
app/src/: app_fsm.c  app_fsm.h  ble_service.c  ble_service.h  ble_uuids.h  bringup.c  led_driver.c  led_driver.h  main.c  orientation_service.c  orientation_service.h  ui_service.c  ui_service.h  zbus_chan.h
app/tests/app_fsm/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/app_fsm/boards/: esp32s3_devkitc_procpu.overlay
app/tests/app_fsm/src/: main.c
